# brand-dna-agent

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
configs/: default.yaml
configs/brands/: acne_studios.yaml  arket.yaml  cos.yaml  defacto.yaml  les_benjamins.yaml  zara.yaml
configs/prompts/: audience.md  brand_voice.md  cluster_labels.md  self_eval.md  synthesis.md
examples/: acne-studios-dna.json  acne-studios-train.json
src/brand_dna/: __init__.py  cli.py
src/brand_dna/acquisition/: __init__.py  crawler.py  image_downloader.py  instagram.py  rate_limiter.py
src/brand_dna/analysis/: __init__.py  _pantone.py  audience.py  clustering.py  color_palette.py  garment_aggregator.py  self_eval.py  text_analyzer.py
src/brand_dna/api/: __init__.py  app.py
src/brand_dna/core/: __init__.py  config.py  exceptions.py  models.py  observability.py  orchestrator.py
src/brand_dna/discovery/: __init__.py  opengraph.py  page_classifier.py  robots.py  sitemap.py  structured_data.py
src/brand_dna/filtering/: __init__.py  deduplicator.py  fashion_classifier.py  quality.py
src/brand_dna/llm/: __init__.py  client.py  prompts.py
src/brand_dna/storage/: __init__.py  image_store.py  metadata_store.py
src/brand_dna/synthesis/: __init__.py  composer.py  pdf_renderer.py  utils.py
src/brand_dna/synthesis/templates/: brand_dna.html
src/brand_dna/web/: app.js  index.html  style.css
tests/: conftest.py
tests/unit/: test_color_palette.py  test_composer_helpers.py  test_config.py  test_discovery.py  test_filtering.py  test_llm_utils.py  test_workspace.py
