[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brand-dna-agent"
version = "0.1.0"
description = "Autonomous Brand Intelligence Agent — produces structured Brand DNA dossiers from a brand's web presence"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Brand DNA Team" }
]
license = { text = "Proprietary" }
keywords = ["fashion", "brand-intelligence", "ai-agent", "computer-vision"]

dependencies = [
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "pyyaml>=6.0.1",
    "httpx[http2]>=0.27.0",
    "selectolax>=0.3.21",
    "aiofiles>=23.2.1",
    "tenacity>=8.2.3",
    "structlog>=24.1.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "Pillow>=10.2.0",
    "imagehash>=4.3.1",
    "numpy>=1.26.0,<2.0.0",
    "scikit-learn>=1.4.0",
    "scikit-image>=0.22.0",
    "open_clip_torch>=2.24.0",
    "transformers>=4.40.0,<5.0.0",
    "torch>=2.2.0",
    "weasyprint>=61.0",
    "jinja2>=3.1.3",
    "openai>=1.30.0",
    "tiktoken>=0.6.0",
    "python-dotenv>=1.0.1",
    "tldextract>=5.1.0",
    "lxml>=5.1.0",
    "beautifulsoup4>=4.12.3",
    "playwright>=1.42.0",
    "matplotlib>=3.8.0",
    "colormath>=3.0.0",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "hypothesis>=6.99.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "types-PyYAML>=6.0",
    "respx>=0.21.0",
]

[project.scripts]
brand-dna = "brand_dna.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
brand_dna = ["synthesis/templates/*.html", "synthesis/templates/*.css"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --strict-markers"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
